# agentic_trader

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  approvals.py  auth.py  config.py  db.py  dbdump.py  execution_service.py  history.py  instruments.py  main.py  models.py  personal.py  pipeline.py  portfolio_service.py  push.py  scan_audit.py  scan_service.py  scheduler.py  schemas.py  service.py  tracking.py  watchlist.py
backend/app/agents/: __init__.py  constructor.py  scorer.py
backend/app/api/: __init__.py  routes.py
backend/app/brokers/: __init__.py  base.py  dry_run.py  ibkr_web.py
backend/app/ledger/: __init__.py  money.py  service.py
backend/app/llm/: __init__.py  base.py  openrouter.py
backend/app/memory/: __init__.py  store.py
backend/app/screener/: __init__.py  events.py  fundamentals.py  macro.py  technicals.py  universe.py
backend/scripts/: apply_proposal_shadow.py  export_local_db.py  ibkr_positions.py  scan_funnel.py  verify_ibkr.py
backend/tests/: test_api_access.py  test_auth.py  test_autoexec.py  test_cadence.py  test_dbdump.py  test_events.py  test_history.py  test_ledger.py  test_pem_bootstrap.py  test_push.py  test_ranker.py  test_real.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthGate.tsx  HistoryChart.tsx  Logo.tsx  PwaInstall.tsx  RealDoor.tsx
frontend/src/lib/: api.ts  format.ts  (+1 more)
(+6 files in other folders)
