[project]
name = "agentic-trader-backend"
version = "0.1.0"
description = "Agentic Trader backend: rules engine + multi-agent LLM + IBKR execution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "apscheduler>=3.11",
    "pandas>=2.2",
    "numpy>=2.1",
    "yfinance>=0.2.50",
    "httpx>=0.27",
    "pywebpush>=2.3.0",
    "ibind>=0.1.23",
    "pycryptodome>=3.23.0",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
# Broker IBKR · ruta PRINCIPAL (live + hosted): Web API OAuth 1.0a, 100% headless.
ibkr-webapi = ["ibind>=0.1.15"]
# Broker IBKR · ruta ALTERNATIVA (máquina propia): TWS/IB Gateway vía socket.
# Fork mantenido de ib_insync (archivado en 2024).
ibkr-gateway = ["ib_async>=1.0.3"]
# Base de datos Postgres/Supabase en producción.
postgres = ["psycopg[binary]>=3.2"]
# Memoria vectorial del agente: búsqueda en SQLite + embeddings locales (sin torch).
memory = ["sqlite-vec>=0.1.6", "fastembed>=0.4.0"]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
